[package]
name = "streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
mini-redis = "0.4"
tokio-stream = { version = "0.1.11", features = ["sync"] }
futures = "0.3.21"
rand = "0.8.5"
async-stream = "0.3.3"
flume = "0.10.14"
nom = "7.1.2"
midir = "0.9.0"
serde = { version = "1.0", features = ["derive"] } 
serde_yaml = "0.9"
wasmer = { version = "3.1.1", features = ["compiler"] }
